Completar traducción completa al español
- Traducir todos los archivos de walkthrough (step1-5.md)
- Expandir significativamente el archivo de localización es.json
- Agregar traducciones para todas las secciones de la interfaz:
  * welcome, home, account, common, chat
  * tasks, files, terminal, browser
  * mcp, settings
- Corregir errores de sintaxis JSON
- Mantener consistencia en terminología técnica
- Preparar para nueva versión del plugin

--- a/webview-ui/src/i18n/locales/es.json
+++ b/webview-ui/src/i18n/locales/es.json
@@ -1,6 +1,6 @@
 {
 	"welcome": {
-		"title": "Hola, soy Genius Code Assistant",
+		"title": "Hola, soy Coppel AI Assistant",
 		"description": "Puedo realizar todo tipo de tareas gracias a los avances en las capacidades de codificación agéntica de Claude 4 Sonnet y el acceso a herramientas que me permiten crear y editar archivos, explorar proyectos complejos, usar un navegador y ejecutar comandos de terminal (con tu permiso, por supuesto). Incluso puedo usar MCP para crear nuevas herramientas y extender mis propias capacidades.",
 		"signupText": "Regístrate para obtener una cuenta y comenzar gratis, o usa una clave API que proporcione acceso a modelos como Claude Sonnet.",
 		"loginButton": "Iniciar Sesión"
@@ -13,7 +13,7 @@
 	"account": {
 		"logout": "Cerrar Sesión",
 		"welcomeDescription": "Regístrate para obtener una cuenta y acceder a los últimos modelos, panel de facturación para ver el uso y créditos, y más funciones próximas.",
-		"signUpButton": "Registrarse con Genius Code Assistant",
+		"signUpButton": "Registrarse con Coppel AI Assistant",
 		"termsText": "Al continuar, aceptas los",
 		"termsOfService": "Términos de Servicio",
 		"and": "y la",
@@ -29,6 +29,317 @@
 		"close": "Cerrar",
 		"ok": "Aceptar",
 		"yes": "Sí",
-		"no": "No"
+		"no": "No",
+		"continue": "Continuar",
+		"back": "Atrás",
+		"next": "Siguiente",
+		"previous": "Anterior",
+		"submit": "Enviar",
+		"confirm": "Confirmar",
+		"retry": "Reintentar",
+		"refresh": "Actualizar",
+		"search": "Buscar",
+		"filter": "Filtrar",
+		"sort": "Ordenar",
+		"settings": "Configuración",
+		"help": "Ayuda",
+		"about": "Acerca de",
+		"version": "Versión",
+		"copy": "Copiar",
+		"paste": "Pegar",
+		"cut": "Cortar",
+		"undo": "Deshacer",
+		"redo": "Rehacer",
+		"select": "Seleccionar",
+		"selectAll": "Seleccionar Todo",
+		"clear": "Limpiar",
+		"reset": "Restablecer",
+		"apply": "Aplicar",
+		"download": "Descargar",
+		"upload": "Subir",
+		"import": "Importar",
+		"export": "Exportar",
+		"new": "Nuevo",
+		"create": "Crear",
+		"add": "Agregar",
+		"remove": "Eliminar",
+		"update": "Actualizar",
+		"modify": "Modificar",
+		"view": "Ver",
+		"preview": "Vista Previa",
+		"open": "Abrir",
+		"browse": "Explorar",
+		"folder": "Carpeta",
+		"file": "Archivo",
+		"name": "Nombre",
+		"type": "Tipo",
+		"size": "Tamaño",
+		"date": "Fecha",
+		"time": "Hora",
+		"status": "Estado",
+		"progress": "Progreso",
+		"complete": "Completo",
+		"incomplete": "Incompleto",
+		"success": "Éxito",
+		"warning": "Advertencia",
+		"info": "Información",
+		"debug": "Depuración"
+	},
+	"chat": {
+		"placeholder": "Escribe tu mensaje aquí...",
+		"send": "Enviar",
+		"newChat": "Nuevo Chat",
+		"clearChat": "Limpiar Chat",
+		"exportChat": "Exportar Chat",
+		"importChat": "Importar Chat",
+		"chatHistory": "Historial de Chat",
+		"noMessages": "No hay mensajes",
+		"typing": "Escribiendo...",
+		"thinking": "Pensando...",
+		"processing": "Procesando...",
+		"generating": "Generando...",
+		"analyzing": "Analizando...",
+		"searching": "Buscando...",
+		"reading": "Leyendo...",
+		"writing": "Escribiendo...",
+		"executing": "Ejecutando...",
+		"completed": "Completado",
+		"failed": "Falló",
+		"cancelled": "Cancelado",
+		"interrupted": "Interrumpido",
+		"paused": "Pausado",
+		"resumed": "Reanudado",
+		"stopped": "Detenido",
+		"started": "Iniciado",
+		"finished": "Terminado",
+		"inProgress": "En Progreso",
+		"pending": "Pendiente",
+		"waiting": "Esperando",
+		"ready": "Listo",
+		"busy": "Ocupado",
+		"idle": "Inactivo",
+		"online": "En Línea",
+		"offline": "Fuera de Línea",
+		"connected": "Conectado",
+		"disconnected": "Desconectado",
+		"reconnecting": "Reconectando",
+		"timeout": "Tiempo Agotado",
+		"retrying": "Reintentando",
+		"maxRetriesReached": "Máximo de Reintentos Alcanzado"
+	},
+	"tasks": {
+		"newTask": "Nueva Tarea",
+		"taskHistory": "Historial de Tareas",
+		"currentTask": "Tarea Actual",
+		"completedTasks": "Tareas Completadas",
+		"pendingTasks": "Tareas Pendientes",
+		"failedTasks": "Tareas Fallidas",
+		"cancelledTasks": "Tareas Canceladas",
+		"taskDetails": "Detalles de la Tarea",
+		"taskProgress": "Progreso de la Tarea",
+		"taskStatus": "Estado de la Tarea",
+		"taskDuration": "Duración de la Tarea",
+		"taskStartTime": "Hora de Inicio",
+		"taskEndTime": "Hora de Finalización",
+		"taskDescription": "Descripción de la Tarea",
+		"taskInstructions": "Instrucciones de la Tarea",
+		"taskResults": "Resultados de la Tarea",
+		"taskLogs": "Registros de la Tarea",
+		"taskErrors": "Errores de la Tarea",
+		"taskWarnings": "Advertencias de la Tarea",
+		"resumeTask": "Reanudar Tarea",
+		"pauseTask": "Pausar Tarea",
+		"stopTask": "Detener Tarea",
+		"cancelTask": "Cancelar Tarea",
+		"deleteTask": "Eliminar Tarea",
+		"duplicateTask": "Duplicar Tarea",
+		"shareTask": "Compartir Tarea",
+		"exportTask": "Exportar Tarea",
+		"importTask": "Importar Tarea",
+		"taskTemplate": "Plantilla de Tarea",
+		"saveAsTemplate": "Guardar como Plantilla",
+		"loadTemplate": "Cargar Plantilla",
+		"noTasks": "No hay tareas",
+		"taskCreated": "Tarea creada",
+		"taskUpdated": "Tarea actualizada",
+		"taskDeleted": "Tarea eliminada",
+		"taskCompleted": "Tarea completada",
+		"taskFailed": "Tarea falló",
+		"taskCancelled": "Tarea cancelada"
+	},
+	"files": {
+		"createFile": "Crear Archivo",
+		"editFile": "Editar Archivo",
+		"deleteFile": "Eliminar Archivo",
+		"renameFile": "Renombrar Archivo",
+		"copyFile": "Copiar Archivo",
+		"moveFile": "Mover Archivo",
+		"openFile": "Abrir Archivo",
+		"closeFile": "Cerrar Archivo",
+		"saveFile": "Guardar Archivo",
+		"saveAsFile": "Guardar Como",
+		"revertFile": "Revertir Archivo",
+		"fileExplorer": "Explorador de Archivos",
+		"recentFiles": "Archivos Recientes",
+		"favoriteFiles": "Archivos Favoritos",
+		"searchFiles": "Buscar Archivos",
+		"filterFiles": "Filtrar Archivos",
+		"sortFiles": "Ordenar Archivos",
+		"fileProperties": "Propiedades del Archivo",
+		"filePermissions": "Permisos del Archivo",
+		"fileSize": "Tamaño del Archivo",
+		"fileType": "Tipo de Archivo",
+		"fileName": "Nombre del Archivo",
+		"filePath": "Ruta del Archivo",
+		"fileExtension": "Extensión del Archivo",
+		"fileCreated": "Archivo creado",
+		"fileModified": "Archivo modificado",
+		"fileAccessed": "Archivo accedido",
+		"fileDeleted": "Archivo eliminado",
+		"fileRenamed": "Archivo renombrado",
+		"fileCopied": "Archivo copiado",
+		"fileMoved": "Archivo movido",
+		"fileOpened": "Archivo abierto",
+		"fileClosed": "Archivo cerrado",
+		"fileSaved": "Archivo guardado",
+		"fileReverted": "Archivo revertido",
+		"fileNotFound": "Archivo no encontrado",
+		"fileExists": "El archivo ya existe",
+		"fileReadOnly": "Archivo de solo lectura",
+		"fileCorrupted": "Archivo corrupto",
+		"fileTooLarge": "Archivo demasiado grande",
+		"fileEmpty": "Archivo vacío",
+		"unsavedChanges": "Cambios sin guardar",
+		"discardChanges": "Descartar cambios",
+		"saveChanges": "Guardar cambios"
+	},
+	"terminal": {
+		"newTerminal": "Nueva Terminal",
+		"closeTerminal": "Cerrar Terminal",
+		"clearTerminal": "Limpiar Terminal",
+		"terminalOutput": "Salida de Terminal",
+		"terminalInput": "Entrada de Terminal",
+		"terminalHistory": "Historial de Terminal",
+		"runCommand": "Ejecutar Comando",
+		"stopCommand": "Detener Comando",
+		"killProcess": "Terminar Proceso",
+		"commandRunning": "Comando ejecutándose",
+		"commandCompleted": "Comando completado",
+		"commandFailed": "Comando falló",
+		"commandCancelled": "Comando cancelado",
+		"commandTimeout": "Tiempo de comando agotado",
+		"workingDirectory": "Directorio de Trabajo",
+		"changeDirectory": "Cambiar Directorio",
+		"environmentVariables": "Variables de Entorno",
+		"shellType": "Tipo de Shell",
+		"terminalSettings": "Configuración de Terminal",
+		"fontSize": "Tamaño de Fuente",
+		"fontFamily": "Familia de Fuente",
+		"colorScheme": "Esquema de Colores",
+		"cursorStyle": "Estilo de Cursor",
+		"scrollback": "Historial de Desplazamiento",
+		"copySelection": "Copiar Selección",
+		"pasteText": "Pegar Texto",
+		"selectAll": "Seleccionar Todo",
+		"findInTerminal": "Buscar en Terminal",
+		"terminalTabs": "Pestañas de Terminal",
+		"splitTerminal": "Dividir Terminal",
+		"maximizeTerminal": "Maximizar Terminal",
+		"minimizeTerminal": "Minimizar Terminal"
+	},
+	"browser": {
+		"openBrowser": "Abrir Navegador",
+		"closeBrowser": "Cerrar Navegador",
+		"navigateToUrl": "Navegar a URL",
+		"refreshPage": "Actualizar Página",
+		"goBack": "Ir Atrás",
+		"goForward": "Ir Adelante",
+		"goHome": "Ir al Inicio",
+		"bookmarks": "Marcadores",
+		"addBookmark": "Agregar Marcador",
+		"removeBookmark": "Eliminar Marcador",
+		"browserHistory": "Historial del Navegador",
+		"clearHistory": "Limpiar Historial",
+		"downloadHistory": "Historial de Descargas",
+		"browserSettings": "Configuración del Navegador",
+		"userAgent": "Agente de Usuario",
+		"viewport": "Ventana de Visualización",
+		"cookies": "Cookies",
+		"localStorage": "Almacenamiento Local",
+		"sessionStorage": "Almacenamiento de Sesión",
+		"clearCookies": "Limpiar Cookies",
+		"clearStorage": "Limpiar Almacenamiento",
+		"enableJavaScript": "Habilitar JavaScript",
+		"disableJavaScript": "Deshabilitar JavaScript",
+		"enableImages": "Habilitar Imágenes",
+		"disableImages": "Deshabilitar Imágenes",
+		"takeScreenshot": "Tomar Captura de Pantalla",
+		"printPage": "Imprimir Página",
+		"viewSource": "Ver Código Fuente",
+		"inspectElement": "Inspeccionar Elemento",
+		"consoleLog": "Registro de Consola",
+		"networkLog": "Registro de Red",
+		"performanceLog": "Registro de Rendimiento",
+		"securityLog": "Registro de Seguridad",
+		"pageLoaded": "Página cargada",
+		"pageError": "Error de página",
+		"navigationFailed": "Navegación falló",
+		"connectionTimeout": "Tiempo de conexión agotado",
+		"sslError": "Error SSL",
+		"dnsError": "Error DNS",
+		"networkError": "Error de red"
+	},
+	"mcp": {
+		"mcpServers": "Servidores MCP",
+		"addServer": "Agregar Servidor",
+		"removeServer": "Eliminar Servidor",
+		"enableServer": "Habilitar Servidor",
+		"disableServer": "Deshabilitar Servidor",
+		"serverStatus": "Estado del Servidor",
+		"serverUrl": "URL del Servidor",
+		"serverName": "Nombre del Servidor",
+		"serverDescription": "Descripción del Servidor",
+		"serverVersion": "Versión del Servidor",
+		"serverCapabilities": "Capacidades del Servidor",
+		"serverTools": "Herramientas del Servidor",
+		"serverResources": "Recursos del Servidor",
+		"serverConfiguration": "Configuración del Servidor",
+		"serverLogs": "Registros del Servidor",
+		"serverHealth": "Salud del Servidor",
+		"serverMetrics": "Métricas del Servidor",
+		"connectServer": "Conectar Servidor",
+		"disconnectServer": "Desconectar Servidor",
+		"restartServer": "Reiniciar Servidor",
+		"testConnection": "Probar Conexión",
+		"serverConnected": "Servidor conectado",
+		"serverDisconnected": "Servidor desconectado",
+		"serverError": "Error del servidor",
+		"connectionFailed": "Conexión falló",
+		"authenticationRequired": "Autenticación requerida",
+		"invalidCredentials": "Credenciales inválidas",
+		"serverTimeout": "Tiempo del servidor agotado",
+		"serverUnavailable": "Servidor no disponible",
+		"protocolError": "Error de protocolo",
+		"unsupportedVersion": "Versión no soportada"
+	},
+	"settings": {
+		"generalSettings": "Configuración General",
+		"apiSettings": "Configuración de API",
+		"modelSettings": "Configuración de Modelo",
+		"interfaceSettings": "Configuración de Interfaz",
+		"advancedSettings": "Configuración Avanzada",
+		"resetSettings": "Restablecer Configuración",
+		"exportSettings": "Exportar Configuración",
+		"importSettings": "Importar Configuración",
+		"saveSettings": "Guardar Configuración",
+		"discardSettings": "Descartar Configuración",
+		"defaultSettings": "Configuración Predeterminada",
+		"customSettings": "Configuración Personalizada",
+		"settingsUpdated": "Configuración actualizada",
+		"settingsReset": "Configuración restablecida",
+		"settingsExported": "Configuración exportada",
+		"settingsImported": "Configuración importada",
+		"invalidSettings": "Configuración inválida",
+		"settingsCorrupted": "Configuración corrupta"
 	}
 }
